data/all_generated_tests/raw_wast_tests/block_MismanagementofBlockNesting_2245.wast
;; 6. **Test Case: Inter-block Result Handling**    - **Test Description**: Use nested blocks to produce intermediate results with operations like `add` or `mul` and `br` statements to test if results are correctly transferred between blocks.    - **Constraint**: Confirms that results from one block are accurately carried over when branches are taken to outer blocks.    - **Relation to Mismanagement**: Incorrect handling of block results and stack transference would lead to computation errors and inconsistencies.

(assert_invalid
  (module (func $inter_block_result_handling (result i32)
    (block (result i32)
      (block (result i32)
        (i32.const 10)
        (i32.const 32)
        (i32.add)
        (br 1)
      )
      (i32.const 0)
    )
  ))
  "type mismatch"
)